@startuml

title __AGENTES's Class Diagram__\n

  namespace main.java.agentes {
    class AgenteArchivo {
        ~ file : BufferedReader
        + convertir()
        # onGuiEvent()
        # setup()
    }
  }
  

  namespace main.java.agentes {
    class AgenteDM {
        # setup()
    }
  }
  

  namespace main.java.agentes {
    class AgenteDM.aplicarClasificacion {
        + action()
    }
  }
  

  namespace main.java.agentes {
    class AgenteResultado {
        # onGuiEvent()
        # setup()
    }
  }
  

  namespace main.java.agentes {
    class AgenteResultado.mostrarResultado {
        + action()
    }
  }
  

  namespace main.java.agentes {
    class JfrmAgenteArchivo {
        ~ owner : GuiAgent
        - JpIndex : JPanel
        - jLabel1 : JLabel
        - jbtnBrowser : JButton
        - jbtnIniciar : JButton
        - jlblRuta : JLabel
        + JfrmAgenteArchivo()
        + obtenerRuta()
        - initComponents()
        - jbtnBrowserActionPerformed()
        - jbtnIniciarActionPerformed()
    }
  }
  

  namespace main.java.agentes {
    class JfrmAgenteResultado {
        ~ owner : GuiAgent
        - jPanel1 : JPanel
        - jScrollPane1 : JScrollPane
        - jtxtAreaResultado : JTextArea
        + JfrmAgenteResultado()
        + mostrarResultado()
        - initComponents()
    }
  }
  

  AgenteArchivo -up-|> jade.gui.GuiAgent
  AgenteArchivo o-- JfrmAgenteArchivo : vfile
  AgenteDM -up-|> jade.core.Agent
  AgenteDM +-down- AgenteDM.aplicarClasificacion
  AgenteDM.aplicarClasificacion -up-|> jade.core.behaviours.OneShotBehaviour
  AgenteResultado -up-|> jade.gui.GuiAgent
  AgenteResultado o-- AgenteResultado : ag
  AgenteResultado o-- JfrmAgenteResultado : vres
  AgenteResultado +-down- AgenteResultado.mostrarResultado
  AgenteResultado.mostrarResultado -up-|> jade.core.behaviours.OneShotBehaviour
  JfrmAgenteArchivo -up-|> javax.swing.JFrame
  JfrmAgenteResultado -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
